--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 __pycache__
 *~
 \#.*\#
-db.sqlite3
+# db.sqlite3
 migrations
 
 # -*- mode: gitignore; -*-
@@ -36,3 +36,6 @@ tramp
 
 # cask packages
 .cask/
+
+# compiled python
+*.pyc
